yelb-app/appserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  labels:
    app: yelb-appserver
    tier: middletier
spec:
  type: ClusterIP
  ports:
  - port: 4567
  selector:
    app: yelb-appserver
    tier: middletier

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-appserver
  namespace: flux-yelb-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: yelb-appserver
      tier: middletier
  template:
    metadata:
      labels:
        app: yelb-appserver
        tier: middletier
    spec:
      containers:
      - name: yelb-appserver
        image:  mreferre/yelb-appserver:0.7
        ports:
        - containerPort: 4567
      imagePullSecrets:
        - name: docker-registry-creds-tkg
