yelb-app/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-db
  namespace: flux-yelb-app
  labels:
    app: yelb-db
    tier: backenddb
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: yelb-db
    tier: backenddb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-db
  namespace: flux-yelb-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: yelb-db
      tier: backenddb
  template:
    metadata:
      labels:
        app: yelb-db
        tier: backenddb
    spec:
      containers:
      - name: yelb-db
        image:  mreferre/yelb-db:0.6
        ports:
        - containerPort: 5432
      imagePullSecrets:
        - name: docker-registry-creds-tkg
