yelb-app/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  labels:
    app: yelb-ui
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: yelb-ui
    tier: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
  namespace: flux-yelb-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: yelb-ui
      tier: frontend    
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
    spec:
      containers:
      - name: yelb-ui
        image:  mreferre/yelb-ui:0.10
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: docker-registry-creds-tkg
