yelb-app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yelb-ui
  namespace: flux-yelb-app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`yelb.rguido-tanzulab2.corp.local`) # The DNS server must be configured to resolve this hostname to the IP address of the Traefik instance.
      services:
        - kind: Service
          name: yelb-ui
          port: 80
  # tls:
  #   certResolver: myresolver
